chore(be): agent-finalize 산출물 갱신 (diff.md, self-review build-smoke 결과)